--- a/blog/backend/package.json
+++ b/blog/backend/package.json
@@ -17,9 +17,7 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.17"
+    "mongoose": "^7.0.0",
+    "morgan": "^1.10.0"
   }
 }
