--- a/blog/frontend/package.json
+++ b/blog/frontend/package.json
@@ -13,11 +13,15 @@
     "@reduxjs/toolkit": "^1.9.3",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "moment": "^2.29.4",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "redux": "^4.2.1",
