--- a/blog/frontend/package.json
+++ b/blog/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.4.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
